# Remember to run `poetry update` after you edit this file!

[tool.poetry]
    name = "royalpack"
    version = "5.2.5"
    description = "A Royalnet command pack for the Royal Games community"
    authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
    license = "AGPL-3.0+"
    readme = "README.md"
    homepage = "https://github.com/Steffo99/royalpack"
    documentation = "https://gh.steffo.eu/royalpack/"
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
    ]

# Library dependencies
[tool.poetry.dependencies]
    python = "^3.8"

    riotwatcher = "^2.7.1"
    royalspells = "^3.2"
    markovify = "^0.8.0"

    [tool.poetry.dependencies.royalnet]
        version = "^5.1.6"
        # Maybe... there is a way to make these selectable?
        extras = [
            "telegram",
            "discord",
            "alchemy_easy",
            "bard",
            "constellation",
            "sentry",
            "herald",
            "coloredlogs",
            "matrix"
        ]

# Development dependencies
[tool.poetry.dev-dependencies]



# Optional dependencies
[tool.poetry.extras]



[build-system]
    requires = ["poetry>=0.12"]
    build-backend = "poetry.masonry.api"
